docs/v2/10.指南/10.指南/30.安装.md
---
title: 安装
date: 2020-05-11 13:54:56
permalink: /v2/pages/install
categories: 
  - 指南
tags: 
  - 指南
article: false
---

### 环境要求

- PHP >= 7.2.5  
  安装 fileinfo、redis 扩展  
  开启 putenv、proc_open 函数
- MySQL >= 5.5
- Redis
- Node >= 12.0.0
- NPM >= 6.9.0

### 安装后端

##### 克隆项目
```bash
git clone -b v2.7 https://gitee.com/skyselang/yylAdmin.git
```
##### 进入项目目录
```bash
cd yylAdmin
```
##### 设置 composer
```bash
composer config -g repo.packagist composer https://mirrors.aliyun.com/composer/
```
##### 安装依赖
```bash
composer install
```
##### 导入数据库
```bash
数据库文件：private/yyladmin.sql
```
##### 修改配置
```bash
重命名.env.example成.env环境变量文件修改里面配置
```
##### 环境配置（phpStudy）
```bash
根据你的实际环境软件配置
域名：localhost
端口：9526
根目录：yylAdmin/public
PHP版本：7.3.9
```
##### 设置伪静态
###### Nginx
```bash
location / {
    if (!-e $request_filename){
        rewrite  ^(.*)$  /index.php?s=$1  last;  break;
    }
}
```
###### Apache
```bash
<IfModule mod_rewrite.c>
  Options +FollowSymlinks -Multiviews
  RewriteEngine On

  RewriteCond %{REQUEST_FILENAME} !-d
  RewriteCond %{REQUEST_FILENAME} !-f
  RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
</IfModule>
```
::: warning
不设置伪静态接口文档无法访问  
:::

### 安装前端

#### 克隆项目
```bash
git clone -b v2.7 https://gitee.com/skyselang/yylAdminWeb.git
```
#### 进入项目目录
```bash
cd yylAdminWeb
```
#### 使用 cnpm
```bash
npm install -g cnpm@6.2.0 --registry=https://registry.npmmirror.com
```
#### 安装依赖
```bash
cnpm install
```
#### 修改配置
```bash
在.env.xxx环境变量文件里面修改接口baseURL
VUE_APP_BASE_URL = 'http://localhost:9526'
```
#### 本地开发 启动项目
```bash
cnpm run dev
```
#### 开发完打包正式环境
```bash
cnpm run build:prod
```
#### 开发完打包测试环境
```bash
cnpm run build:stage
```

### 访问后台

地址：[http://localhost:9527](http://localhost:9527)  
账号：yyladmin  
密码：123456  
超管：skyselang  
密码：123456
